# RuVector

./: Cargo.toml
crates/mcp-brain-server/: Dockerfile
crates/ruvector-sparsifier/: Cargo.toml
crates/ruvector-sparsifier/src/: graph.rs  importance.rs  lib.rs  sparsifier.rs
crates/rvAgent/rvagent-learning/: Cargo.docker.toml  Cargo.toml  Dockerfile  cloudbuild.yaml
crates/rvAgent/rvagent-learning/src/discovery/: external.rs  mod.rs
docs/adr/: ADR-084-critical-issues-audit.md
docs/research/rydberg-cavity-ruqu/: 00-superradiant-clock-phase.md  01-ruqu-integration-architecture.md  02-ruvector-phase-memory.md  03-adr-rydberg-cavity-ruqu.md  04-rvf-wit-cognitive-runtime.md  06-sota-literature-review.md  07-hilbert-space-scaling.md  08-hamiltonian-derivation.md  09-finite-size-scaling-mincut.md  10-implementation-phasing.md
examples/rydberg-cavity/: Cargo.toml
examples/rydberg-cavity/examples/: phase_scan.rs  single_point.rs
examples/rydberg-cavity/src/: basis.rs  hamiltonian.rs  lattice.rs  lib.rs  observables.rs  scanner.rs  solver.rs  symmetry.rs  types.rs
examples/rydberg-cavity/tests/: acceptance_test.rs
quickstarts/: Get_started_interactions_api.ipynb
