[package]
name = "rydberg-cavity"
version = "0.1.0"
edition = "2021"
description = "Rydberg-cavity superradiant clock phase discovery engine for ruQu"
publish = false

[dependencies]
# Numerics and linear algebra
num-complex = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
nalgebra = "0.33"
nalgebra-sparse = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Random
rand = "0.8"

# Parallel processing
rayon = "1.10"

# Crypto for witness hashes
sha2 = "0.10"

[dev-dependencies]
approx = "0.5"

[[example]]
name = "phase_scan"
path = "examples/phase_scan.rs"

[[example]]
name = "single_point"
path = "examples/single_point.rs"
